# CC

app/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
app/reports/: mau-bao-cao.json
app/src/: App.tsx  i18n.ts  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/modules/: detection.ts  report.ts
app/src/services/: collector.ts
automation/: plan.json  status.json
automation/outputs/: phase2-artifact.json  phase3-artifact.json  phase4-artifact.json  phase5-artifact.json  phase6-artifact.json  phase7-artifact.json
automation/qa/: phase1-qa.json  phase2-qa.json  phase3-qa.json  phase4-qa.json  phase5-qa.json  phase6-qa.json  phase7-qa.json
docs/: KE_HOACH_TRIEN_KHAI_UTF8.md
scripts/: auto-implement.ps1
templates/: app.config.json  mau-bao-cao.md  vi-VN.json
